syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Types";

message Transaction {
  Address from = 1;
  Address to = 2;
  int64 ref_block_number = 3;
  bytes ref_block_prefix = 4;
  string method_name = 5;
  bytes params = 6;
  bytes signature = 10000;
}

// Common

message Address
{
  bytes value = 1;
}

message Hash
{
  bytes value = 1;
}

message SInt32Value
{
  sint32 value = 1;
}

message SInt64Value
{
  sint64 value = 1;
}

message MerklePath {
  repeated MerklePathNode merkle_path_nodes = 1;
}

message MerklePathNode{
  Hash hash = 1;
  bool is_left_child_node = 2;
}

message BinaryMerkleTree {
  repeated Hash nodes = 1;
  Hash root = 2;
  int32 leaf_count = 3;
}

message TransactionFeeCharged {
  string symbol = 1;
  sint64 amount = 2;
}

message ResourceTokenCharged {
  string symbol = 1;
  sint64 amount = 2;
}
